# qFront

./: CMakeLists.txt  Dockerfile  Makefile  README.md  gates.json
antlr/: qasm3Lexer.g4  qasm3Parser.g4
circuits/: adder-cdkm.qasm  test.qasm
inc/: ArgParser.hpp  AtomicGateLoader.hpp  Passes.hpp  ScopeManager.hpp  decompose.hpp  ir.hpp  merge.hpp  temp_printer.hpp  utils.hpp
inc/printers/: AutoQParaPrinter.hpp  MOSFPrinter.hpp  OpenQASMPrinter.hpp  Printer.hpp  StatsPrinter.hpp  StimPrinter.hpp
inc/visitors/: GateBodyCollector.hpp  GateHeadersCollector.hpp  ProgramCollector.hpp  RegisterCollector.hpp
json_gates/: gates.json  intgates.json
src/: ArgParser.cpp  AtomicGateLoader.cpp  ScopeManager.cpp  decompose.cpp  ir.cpp  main.cpp  merge.cpp  temp_printer.cpp  unroll.cpp  utils.cpp
src/passes/: DecomposeMCX.cpp  EvaluateAngles.cpp  MergeRegisters.cpp  UnrollLoops.cpp
src/printers/: AutoQParaPrinter.cpp  MOSFPrinter.cpp  OpenQASMPrinter.cpp  StatsPrinter.cpp  StimPrinter.cpp
src/visitors/: GateBodyCollector.cpp  GateHeadersCollector.cpp  ProgramCollector.cpp  RegisterCollector.cpp
